[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
chrono = "0.4.42"
convert_case = "0.8.0"
darling = "0.20.11"
indexmap = "2.12.1"
miette = "7.6.0"
proc-macro2 = "1.0.95"
quote = "1.0.40"
regex = "1.12.2"
relative-path = "2.0.1"
reqwest = { version = "0.12.24", default-features = false }
ron = "0.12.0"
rpkl = "0.6.0"
rust_decimal = "1.39.0"
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.33"
serde_norway = "0.9.42"
starbase_sandbox = "0.10.1"
syn = "2.0.111"
toml = "0.9.8"
tracing = "0.1.41"
url = "2.5.7"
uuid = "1.18.1"
