[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
chrono = "0.4.41"
indexmap = "2.10.0"
miette = "7.6.0"
regex = "1.11.1"
relative-path = "2.0.1"
reqwest = { version = "0.12.22", default-features = false }
ron = "0.10.1"
rpkl = "0.4.2"
rust_decimal = "1.37.2"
semver = "1.0.26"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.33"
serde_yml = "0.0.12"
starbase_sandbox = "0.9.4"
toml = "0.9.1"
tracing = "0.1.41"
url = "2.5.4"
uuid = "1.17.0"
