[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
chrono = "0.4.42"
indexmap = "2.13.0"
miette = "7.6.0"
regex = "1.12.2"
relative-path = "2.0.1"
reqwest = { version = "0.13.1", default-features = false }
ron = "0.12.0"
rpkl = "0.7.0"
rust_decimal = "1.39.0"
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.33"
serde_norway = "0.9.42"
starbase_sandbox = "0.10.3"
toml = "0.9.8"
tracing = "0.1.44"
url = "2.5.8"
uuid = "1.19.0"
