[package]
name = "schematic"
version = "0.10.1"
edition = "2021"
license = "MIT"
description = "A light-weight, macro-based, layered serde configuration and schema library."
repository = "https://github.com/moonrepo/schematic"
readme = "../../README.md"

[package.metadata.release]
pre-release-replacements = [
	{ file = "../../CHANGELOG.md", search = "Unreleased", replace = "{{version}}" }
]

[package.metadata.docs.rs]
all-features = true

[dependencies]
schematic_macros = { version = "0.10.1", path = "../macros" }
schematic_types = { version = "0.3.1", path = "../types" }
garde = { version = "0.11.2", default-features = false, features = ["pattern"] }
indexmap = "2.0.0"
miette = { workspace = true }
reqwest = { version = "0.11.18", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { workspace = true }
serde_path_to_error = "0.1.11"
starbase_styles = "0.1.11"
thiserror = "1.0.40"
tracing = "0.1.37"

# json
serde_json = { version = "1.0.99", optional = true }

# json schema
schemars = { version = "0.8.12", optional = true, default-features = false }

# toml
toml = { version = "0.7.5", optional = true }

# yaml
serde_yaml = { version = "0.9.22", optional = true }

[features]
default = ["json"]
json = ["dep:serde_json"]
json_schema = ["dep:schemars", "json", "schema"]
schema = ["schematic_macros/schema"]
toml = ["dep:toml"]
typescript = ["schema"]
yaml = ["dep:serde_yaml"]

type_chrono = ["schematic_types/chrono"]
type_regex = ["schematic_types/regex"]

valid_email = ["garde/email"]
valid_url = ["garde/url"]

[dev-dependencies]
schematic = { path = ".", features = [
	"json_schema",
	"json",
	"schema",
	"toml",
	"typescript",
	"type_chrono",
	"type_regex",
	"valid_email",
	"valid_url",
	"yaml",
] }
serial_test = "2.0.0"
starbase_sandbox = "0.1.5"
