[package]
name = "schematic"
version = "0.11.8"
edition = "2021"
license = "MIT"
description = "A light-weight, macro-based, and layered serde configuration and schema library."
repository = "https://github.com/moonrepo/schematic"
readme = "../../README.md"

[package.metadata.release]
pre-release-replacements = [
	{ file = "../../CHANGELOG.md", search = "Unreleased", replace = "{{version}}" },
]

[package.metadata.docs.rs]
all-features = true

[dependencies]
schematic_macros = { version = "0.11.7", path = "../macros" }
schematic_types = { version = "0.4.7", path = "../types" }
garde = { version = "0.15.0", default-features = false, features = ["regex"] }
indexmap = "2.0.0"
miette = { workspace = true }
reqwest = { version = "0.11.20", default-features = false, features = [
	"blocking",
], optional = true }
serde = { workspace = true }
serde_path_to_error = "0.1.14"
starbase_styles = "0.1.15"
thiserror = "1.0.48"
tracing = "0.1.37"

# json
serde_json = { version = "1.0.107", optional = true }

# json schema
schemars = { version = "0.8.15", optional = true, default-features = false }

# toml
toml = { version = "0.8.0", optional = true }

# yaml
serde_yaml = { version = "0.9.25", optional = true }

[features]
default = ["json", "url"]
json = ["dep:serde_json"]
json_schema = ["dep:schemars", "json", "schema"]
schema = ["schematic_macros/schema"]
toml = ["dep:toml"]
typescript = ["schema"]
url = ["dep:reqwest"]
yaml = ["dep:serde_yaml"]

type_chrono = ["schematic_types/chrono"]
type_regex = ["schematic_types/regex"]
type_relative_path = ["schematic_types/relative_path"]
type_semver = ["schematic_types/semver"]
type_url = ["schematic_types/url"]
type_version_spec = ["schematic_types/version_spec"]
type_warpgate = ["schematic_types/warpgate"]

valid_email = ["garde/email"]
valid_url = ["garde/url"]

[dev-dependencies]
schematic = { path = ".", features = [
	"json_schema",
	"json",
	"schema",
	"toml",
	"typescript",
	"type_chrono",
	"type_regex",
	"type_relative_path",
	"type_semver",
	"type_url",
	"type_version_spec",
	"type_warpgate",
	"url",
	"valid_email",
	"valid_url",
	"yaml",
] }
serial_test = "2.0.0"
starbase_sandbox = "0.1.10"

# Types
chrono = { workspace = true }
regex = { workspace = true }
relative-path = { workspace = true, features = ["serde"] }
semver = { workspace = true, features = ["serde"] }
url = { workspace = true, features = ["serde"] }
version_spec = { workspace = true }
warpgate = { workspace = true }
