[package]
name = "schematic_macros_next"
version = "0.18.7"
edition = "2024"
license = "MIT"
description = "Macros for the schematic crate."
homepage = "https://moonrepo.github.io/schematic"
repository = "https://github.com/moonrepo/schematic"

[package.metadata.docs.rs]
all-features = true

[lib]
proc-macro = true

[dependencies]
schematic_core = { version = "0.18.7", path = "../core" }
quote = { workspace = true }
syn = { workspace = true }

[features]
default = ["schema"]
config = []
env = []
extends = []
schema = []
tracing = []
validate = []
