[package]
name = "schematic_macros"
version = "0.18.10"
edition = "2024"
license = "MIT"
description = "Macros for the schematic crate."
homepage = "https://moonrepo.github.io/schematic"
repository = "https://github.com/moonrepo/schematic"

[package.metadata.docs.rs]
all-features = true

[lib]
proc-macro = true

[dependencies]
convert_case = "0.8.0"
darling = "0.21.0"
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.104", features = ["full"] }

[features]
default = []
config = []
env = []
extends = []
schema = []
tracing = []
validate = []
