[package]
name = "schematic_macros"
version = "0.19.0"
edition = "2024"
license = "MIT"
description = "Macros for the schematic crate."
homepage = "https://moonrepo.github.io/schematic"
repository = "https://github.com/moonrepo/schematic"

[package.metadata.docs.rs]
all-features = true

[lib]
proc-macro = true

[dependencies]
convert_case = "0.10.0"
darling = "0.21.3"
proc-macro2 = "1.0.103"
quote = "1.0.42"
syn = { version = "2.0.111", features = ["full"] }

[features]
default = []
config = []
env = []
extends = []
schema = []
tracing = []
validate = []
