[package]
name = "schematic_macros"
version = "0.19.0"
edition = "2024"
license = "MIT"
description = "Macros for the schematic crate."
homepage = "https://moonrepo.github.io/schematic"
repository = "https://github.com/moonrepo/schematic"

[package.metadata.docs.rs]
all-features = true

[lib]
proc-macro = true

[dependencies]
convert_case = { workspace = true }
darling = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }

[features]
default = []
config = []
env = []
extends = []
schema = []
tracing = []
validate = []
