[package]
name = "test_app"
version = "0.11.7"
edition = "2021"
publish = false

[dependencies]
schematic = { path = "../config", features = [
	"json",
	"schema",
	"type_chrono",
	"type_regex",
] }
chrono = { workspace = true, features = ["serde"] }
miette = { workspace = true, features = ["fancy"] }
regex = { workspace = true }
serde = { workspace = true }
serde_json = "1.0.107"
