[package]
name = "test_app"
version = "0.13.0"
edition = "2021"
publish = false

[dependencies]
schematic = { path = "../schematic", features = [
	"json",
	"schema",
	"type_chrono",
	"type_regex",
	"type_rust_decimal",
] }
chrono = { workspace = true, features = ["serde"] }
miette = { workspace = true, features = ["fancy"] }
regex = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
