[package]
name = "schematic_types"
version = "0.4.9"
edition = "2021"
license = "MIT"
description = "Shapes and types for defining schemas for Rust types."
repository = "https://github.com/moonrepo/schematic"

[dependencies]
chrono = { workspace = true, optional = true }
regex = { workspace = true, optional = true }
rust_decimal = { workspace = true, optional = true }
relative-path = { workspace = true, optional = true }
url = { workspace = true, optional = true }
semver = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
serde_yaml = { workspace = true, optional = true }
toml = { workspace = true, optional = true }
version_spec = { workspace = true, optional = true }
warpgate = { workspace = true, optional = true }

[dev-dependencies]
schematic_types = { path = ".", features = [
	"chrono",
	"regex",
	"relative_path",
	"rust_decimal",
	"semver",
	"serde_json",
	"serde_toml",
	"serde_yaml",
	"url",
	"version_spec",
	"warpgate",
] }

[features]
default = []
chrono = ["dep:chrono"]
regex = ["dep:regex"]
relative_path = ["dep:relative-path"]
rust_decimal = ["dep:rust_decimal"]
semver = ["dep:semver"]
serde_json = ["dep:serde_json"]
serde_toml = ["dep:toml"]
serde_yaml = ["dep:serde_yaml"]
url = ["dep:url"]
version_spec = ["dep:version_spec"]
warpgate = ["dep:warpgate"]
