[package]
name = "schematic_types"
version = "0.10.0"
edition = "2024"
license = "MIT"
description = "Shapes and types for defining schemas for Rust types."
homepage = "https://moonrepo.github.io/schematic"
repository = "https://github.com/moonrepo/schematic"

[dependencies]
chrono = { workspace = true, optional = true }
indexmap = { workspace = true }
regex = { workspace = true, optional = true }
rust_decimal = { workspace = true, optional = true }
relative-path = { workspace = true, optional = true }
url = { workspace = true, optional = true }
rpkl = { workspace = true, optional = true }
semver = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
serde_yaml = { workspace = true, optional = true }
serde_yml = { workspace = true, optional = true }
toml = { workspace = true, optional = true }

[dev-dependencies]
schematic_types = { path = ".", features = [
	"chrono",
	"indexmap",
	"regex",
	"relative_path",
	"rust_decimal",
	"semver",
	"serde",
	"serde_json",
	"serde_rpkl",
	"serde_toml",
	"serde_yaml",
	"serde_yml",
	"url",
] }
starbase_sandbox = { workspace = true }

[features]
default = []
chrono = ["dep:chrono"]
indexmap = []
regex = ["dep:regex"]
relative_path = ["dep:relative-path"]
rust_decimal = ["dep:rust_decimal"]
semver = ["dep:semver"]
serde = ["dep:serde"]
serde_json = ["dep:serde_json"]
serde_rpkl = ["dep:rpkl"]
serde_toml = ["dep:toml"]
serde_yaml = ["dep:serde_yaml"]
serde_yml = ["dep:serde_yml"]
url = ["dep:url"]
